--- a/IC_Proporcao/requirements.txt
+++ b/IC_Proporcao/requirements.txt
@@ -1,5 +1,5 @@
-numpy >= 1.20.1
-pandas >= 1.2.4
-pip >= 21.3.1
+# numpy >= 1.20.1
+# pandas >= 1.2.4
+# pip >= 21.3.1
 streamlit >= 1.1.0
 pillow >= 8.4.0
